# uv_dependencie_demo

./: .gitignore  README.md  main.py  pyproject.toml
src/dashscope_demo/dashscope/: dashscope_sdk_demo.py
src/dashscope_demo/openai/: openai_skd_demo.py
src/uv_dependencie_demo/: main.py
