[project]
name = "uv_dependencie_demo"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

#Gunicorn
#"unicorn>=2.1.3",
#依赖 WSGI（Web Server Gateway Interface） 标准接口，专为同步 Web 应用设计 。
#默认依赖同步工作进程（worker），但可通过扩展支持异步模型（如 gevent 或 eventlet）。
#无需直接依赖异步库（如 asyncio），但若需异步功能需额外安装相关依赖。
#the dependency unicorn>=2.1.3 is misspelled. The correct package name is uvicorn, not unicorn. PyPI does not contain a package named unicorn, leading to the unresolved dependency error

#Uvicorn
#依赖 ASGI（Asynchronous Server Gateway Interface） 标准接口，专为异步 Web 应用设计 。
#内置对异步框架（如 FastAPI、Starlette）的支持，依赖 asyncio 和 uvloop 提升性能 。
#FastAPI 默认基于 Starlette 和 Uvicorn 构建，因此 Uvicorn 通常与这些框架协同工作 。
dependencies = [
    "dashscope>=1.23.8",
    "fastapi>=0.115.12",
    "openai>=1.95.0",
    "twine>=6.1.0",
    "uvicorn>=0.34.3",
]

[project.scripts]
uv_dependencie_demo = "uv_dependencie_demo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
